tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedInterfaceDecl2.pdtt
--TEST--
Test unfinished interface declaration error reporting
--FILE--
<?php
interface R{};
interface I extends R, {}
?>
--EXPECT--
[line=3, start=44, end=45] syntax error, unexpected '{'